--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
-# 1. VERCEL (Doporučeno) - vercel.json
 {
   "version": 2,
+  "functions": {
+    "server.js": {
+      "runtime": "@vercel/node@18.x"
+    }
+  },
   "builds": [
     {
-      "src": "server.js",
+      "src": "server.js", 
       "use": "@vercel/node"
     }
   ],
@@ -16,12 +20,5 @@
       "src": "/(.*)",
       "dest": "/server.js"
     }
-  ],
-  "env": {
-    "GOOGLE_CLIENT_ID": "@google_client_id",
-    "GOOGLE_CLIENT_SECRET": "@google_client_secret",
-    "GOOGLE_REDIRECT_URI": "@google_redirect_uri",
-    "GOOGLE_ACCESS_TOKEN": "@google_access_token",
-    "GOOGLE_REFRESH_TOKEN": "@google_refresh_token"
-  }
+  ]
 }
